--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 }
 /* setting up root customer properties for font family, font weight, color, font size using rem */
 :root{
-    --ff-primary:'Pacifico', cursive;
-    --ff-secondary:'Source Sans Pro', sans-serif;
+    --ff-primary:'Source Sans Pro', sans-serif;
+    --ff-secondary:'Pacifico', cursive;
 
     --fw-reg:300;
     --fw-bold:900;
@@ -59,8 +59,38 @@ h3 {
     margin: 0;
 }
 
+strong {
+    font-weight: var(--fw-bold)
+}
+
 h1 {font-size: var(--fs-h1);}
 
 h2 {font-size: var(--fs-h2);}
 
 h3 {font-size: var(--fs-h3);}
+
+/* customizing titles and subtitles */
+/* using margins and padding using em is a choice I make because it is relative the font size */
+.section__title {
+    margin-bottom: .4em;
+}
+
+.section__title--intro {
+    font-weight: var(--fw-reg)
+}
+
+/* using display block on strong to make the title always be in it's own line */
+.section__title--intro strong {
+    display: block;
+}
+
+.section__subtitle{
+    margin: 0;
+    font-size: var(--fs-h3);
+}
+
+.section__subtitle--intro,
+.section__subtitle--about {
+    background: var(--clr-accent);
+    font-size: var(--ff-secondary);
+}
