--- a/css/style.css
+++ b/css/style.css
@@ -21,10 +21,33 @@
     --fs-h2:2.25rem;
     --fs-h3:1.25rem;
     --fs-body:1rem;
-    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25);
+    --bs: 0.25em 0.25em 0.75em rgba(0,0,0,.25),
+          0.125em 0.125em 0.25em rgba(0,0,0,.15);
 }
 
 /* adjusting customer properties for larger screens, mobile first */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -48,6 +71,49 @@ img {
     max-width: 100%;
 
 }
+
+:focus{
+    outline: 3px solid var(--clr-accent);
+    outline-offset: 3px;
+}
+
+
+
+
+
+
+
+
+
+
+
+/*buttons*/
+.btn{
+    display:inline-block;
+    padding:.5em 2.5em;
+    background-color:var(--clr-accent);
+    color:var(--clr-dark);
+    text-decoration:none;
+    cursor:pointer;
+    font-size: .8rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: var(--fw-bold);
+    transition: transform 200ms ease-in-out;
+}
+
+.btn:hover{
+    transform:scale(1.1)
+}
+
+
+
+
+
+
+
+
+
 
 /* ----------------typography---------------- */
 @media (min-width: 900px) {
@@ -108,9 +174,49 @@ h3 {font-size: var(--fs-h3);}
 }
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 /*---------------- header---------------------------------- */
 
 nav { display:none;}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 /* ------------------------intro section---------------------- */
@@ -151,6 +257,72 @@ nav { display:none;}
         position: relative;
         left: -1.5em;/*stretching element further left*/
         width: calc(100% + 1.5em);/*calculates and maintains same size to above words */
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* --------------------My Services Section----------------------- */
+.my-services{
+    background-color: var(--clr-dark); /*both background color and image background, in case image fails people can still read text*/
+    background-image: url(./../images/TanjiroBeast.png);
+    background-size: cover;/*sets background size*/
+    background-blend-mode: multiply; /*makes background darker*/
+    color:var(--clr-light);
+    text-align: center;
+}
+
+.section__title--services{
+    color:var(--clr-accent);
+    position: relative;
+}
+
+/*pseudo element*/
+.section__title--services::after{
+    content: '';/*you must give psuedo elements a content or they will not appear*/
+    display:block;
+    width:2rem;
+    height: 1px;
+    margin: 0.5em auto 1em;
+    background:var(--clr-light);
+    opacity: .25;
+}
+
+.service{
+    max-width: 500px;
+    margin:0 auto;
+
+}
+
+.services{
+    margin-bottom:4em;
+}
+
+@media (min-width:600px){
+    .services{
+        display:flex;
+        max-width: 500px;
+        margin:0;
+        margin-left:auto;
+        margin-right:auto;
+    }
+
+    .service + .service{
+        margin-left:1em;
     }
 }
 
