--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,15 @@
 
 
 
-
+@media (min-width: 900px) {
+    :root {
+        --fs-h1:4.5rem;
+        --fs-h2:3.75rem;
+        --fs-h3:1.5rem;
+        --fs-body:1.125rem;
+        
+    }
+}
 
 
 
@@ -116,15 +124,7 @@ img {
 
 
 /* ----------------typography---------------- */
-@media (min-width: 900px) {
-    :root {
-        --fs-h1:4.5rem;
-        --fs-h2:3.75rem;
-        --fs-h3:1.5rem;
-        --fs-body:1.125rem;
-        
-    }
-}
+
 
 h1,
 h2,
@@ -325,6 +325,202 @@ nav { display:none;}
         margin-left:1em;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*------------------------------------ about me -------------------------------*/
+.about-me{
+    max-width: 1000px;
+    margin:0 auto;
+}
+
+.about-me__img{
+    box-shadow:var(--bs);
+}
+
+@media (min-width: 600px){
+    .about-me{
+        display:grid;
+        grid-template-columns: 1fr 200px;
+        grid-template-areas:
+        "title img"
+        "subtitle img"
+        "text img";
+        grid-column-gap:2em;
+    }
+
+    .section__title--about {
+        grid-area: title;
+    }
+
+    .section__subtitle--about{
+        grid-column:1/-1;
+        grid-row:2;
+        position: relative;
+        left:-1em;
+        width: calc(100% + 2em);
+        padding-left:1em;
+        padding-right: calc(200px + 4em)
+    }
+
+    .about-me__img {
+        grid-area:img;
+        position:relative;
+        z-index: 2;
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-----------------------------------My Work------------------------*/
+
+.my-work{
+    background-color: var(--clr-dark);
+    color:var(--clr-light);
+    text-align: center;
+}
+
+.section__title--work{
+
+}
+
+.section__subtitle--work{
+    color:var(--clr-accent);
+    font-weight:var(--fw-bold);
+    margin-bottom: 2em;
+}
+
+.portfolio{
+    display:grid;
+    grid-template-columns:repeat(auto-fit, minmax(300px, 1fr));
+    max-width:1000px;
+    margin: 0 auto; 
+}
+
+.portfolio__item{
+    background-color: var(--clr-accent);
+    overflow: hidden;
+}
+
+.portfolio__img{
+    transition:
+    transform 750ms cubic-bezier(.5,0,.5,1),
+    opacity 250ms linear;    
+}
+
+.portfolio__item:focus{
+    postition:relative;
+    z-index:2;
+}
+
+.portfolio__img:hover{
+    transform: scale(1.2);
+    opacity: 0.5;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/*-------------------------------------------------footer------------------------------*/
+
+.footer{
+    background-color: #111;
+    color:var(--clr-accent);
+    text-align:center;
+    padding: 2.5em 0;
+    font-size:var(--fs-h3);
+}
+
+.footer a{
+    color:inherit;
+    text-decoration: none;
+}
+
+.footer__link{
+    font-weight:var(--fw-bold)
+}
+
+/* .footer__link--email {
+    font-family: var(--ff-primary);
+} */
+.social-list__link {
+    padding: .5em;
+}
+
+.footer__link:hover,
+.social-list__link:hover {
+    opacity: .7;
+}
+
+.footer__link:hover{
+    text-decoration:underline;
+}
+
+.social-list{
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    margin: 2em 0 0;
+    padding: 0;
+
+}
+
+.social-list__item {
+    margin: 0 .5em;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
